--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
   "repository": "reworkcss/rework-mixin-opacity",
   "keywords": [
     "rework",
+    "rework-mixin",
     "style",
     "stylesheet",
     "css",
     "preprocess",
     "preprocessor",
-    "opacity",
-    "mixin"
+    "opacity"
   ],
   "main": "opacity.js",
   "devDependencies": {
-    "chai": "~1.8.1",
     "mocha": "~1.16.2",
     "rework": "~0.20.2"
   },
